# Language-Model-STS-CFT

./: .gitignore  CLAUDE.md  architecture.md  paper.md  pyproject.toml
data/: data_exploration.ipynb  data_exploration.md  download_sarvam.sh  eda.ipynb  eda.md  itihasa_triplets.py  nli_preprocess.py  vbt_triplets.py
eval/: baseline_comparison.py  baseline_comparison_results.md  detailed_analysis.py  evaluation_review.md  model_playground.ipynb  model_playground.md  sanskrit_sts_eval.py  sn_model_playground.ipynb  sn_model_playground_executed.ipynb  trika_eval_data.py  vbt_to_json.py
eval/logs/: detailed_analysis_output.txt
eval/mteb/: eval_wandb_playground.ipynb  eval_wandb_playground.md  minicpm_retrieval_eval.py  minicpm_sts_eval.py
paper/: Cross-lingual-Sentence-Embedding-for-Low-resource-Chinese-Vietnamese-Based-on-Contrastive-Learning.md  Gecko-Versatile-Text-Embeddings-Distilled-from-Large-Language-Models.md  Improving-Text-Embeddings-for-Smaller-Language-Models-Using-Contrastive-Fine-tuning.md  Improving-Text-Embeddings-with-Large-Language-Models.md  LLM2Vec Large Language Models Are Secretly Powerful Text Encoders.md  McGill-NLP-llm2vec-Code-for-LLM2Vec-Large-Language-Models-Are-Secretly-Powerf.md  NV-Embed-Improved-Techniques-for-Training-LLMs-as-Generalist-Embedding-Models.md  Recent-advances-in-universal-text-embeddings-A-Comprehensive-Review-of-Top-Performing-Methods-on-the-MTEB-Benchmark.md
train/: loss.py  train.py  train_local.sh  train_sarvam.sh  train_sarvam_local.sh  train_sarvam_stage2.sh
train/configs/: local_config.yaml
(+3 files in other folders)
