[project]
name = "language-model-sts-cft"
version = "0.1.0"
description = "Contrastive fine-tuning of small language models for text embedding"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.2.2",
    "transformers==4.40.0",
    "peft==0.10.0",
    "accelerate==0.29.3",
    "datasets==2.19.0",
    "mteb==1.7.4",
    "sentence-transformers==2.7.0",
    "wandb==0.16.6",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.1",
    "jsonlines==4.0.0",
    "pytrec-eval-terrier==0.5.6",
    "sentencepiece>=0.2.0",
]
